runs/runs/github.com/matthew-brett/UoB/logs/test-notebook-code_examples-python_pandas-Sadnap.ipynb-2020-07-15T09.15.txt
[I 200715 09:15:52 inrepo:36] Testing notebook code_examples/python_pandas/Sadnap.ipynb
[W 200715 09:15:52 inrepo:48] No such kernel python2, falling back on kernel language=python
[W 200715 09:15:52 inrepo:60] Using kernel python3 to provide language: python
[I 200715 09:15:53 execute:404] Executing notebook with kernel: python3
/opt/conda/lib/python3.6/site-packages/jupyter_client/manager.py:358: FutureWarning: Method cleanup(connection_file=True) is deprecated, use cleanup_resources(restart=False).
  FutureWarning)
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/opt/conda/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/opt/conda/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/opt/conda/lib/python3.6/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/opt/conda/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
coolness = mss / mss.chicken
radness = mts

print coolness

print radness
------------------

[0;36m  File [0;32m"<ipython-input-25-2246609e34ff>"[0;36m, line [0;32m4[0m
[0;31m    print coolness[0m
[0m                 ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(coolness)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(coolness)? (<ipython-input-25-2246609e34ff>, line 4)


Container exited with status: {'Error': None, 'StatusCode': 1}
